--- a/CSS-Basic1.html
+++ b/CSS-Basic1.html
@@ -18,7 +18,7 @@
 
 <div class="left" id="fourth">
     <h1>  Andaman Sea </h1>
-    <h1 type="text">  Andaman Sea </h1>
+    <input type="text" placeholder="Andaman Sea">
 
 </div class="right" id="second">
 
@@ -27,7 +27,7 @@
 </div>
 <div class="right" id="sixth">
     <img src="./images/pic1.jpg" alt="thailand">
-    <img src="./images/pic1.jpg" alt="thailand" type="text">
+    <input type="text" placeholder="Date of arrival">
 </div>
 
     </div>
