--- a/CSS-Basic3.html
+++ b/CSS-Basic3.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+    </style>
     <link rel='stylesheet' type='text/css' href='styles.css'>
     <meta charset="UTF-8">
     <meta name="author" content="Radek and Igor">
     <title>CF-Times</title>
 </head>
 <body>
-    <nav>
+    <nav style='text-align: left;'>
 <a href="./sports.html">sports</a>
 <a href="./politics.html">politics</a>
 <a href="./news.html">news</a>
     </nav>
 
-   <article>
+   <article style='background-color: bisque;'>
         <h2>FSWD14: Just started!</h2>
 
 <section>
