--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <p>Email Adress</p><br>
 <input type="text" placeholder="Your Email"><br>
 <p>Your Message</p><br>
-<textarea name="message" rows="20" cols="20"></textarea><br>
+<textarea name="message" rows="20" cols="20">Tell us your thouthgs...</textarea><br>
 
 
 </form>
