--- a/css-advanced.html
+++ b/css-advanced.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <h1 style="text-align: center;"><b>CodeFactory Journal</b></h1>
- <aside>
+<div id="nav"> <aside>
      <nav> <ul>
         <li> <a href="./news.html">news</a></li>
         <li> <a href="./politics.html">politics</a></li>
         <li> <a href="./sports.html">sports</a></li>
         </ul> </nav>
-</aside>   
+</aside>   </div>
 <article>
-<h3> What is the best time to visit Vienna?</h3>
+<div id="content"> <h3> What is the best time to visit Vienna?</h3>
 <p>
     The best time to visit Vienna is from April to May or September to October. The mild weather in spring and fall brings mild crowds. Most visitors aim to enjoy the warm, sunny weather that Vienna experiences in the summer months.</p>
 
-</article>
+</article></div>
 <footer style="text-align: center; color: lightgray; background-color: black; font-size: 0.5em;">
 Authors: Radek and Igor 
 All Rights reserved
