--- a/CSS-Basic3.html
+++ b/CSS-Basic3.html
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
     <style>
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-}
 
     </style>
     <link rel='stylesheet' type='text/css' href='styles.css'>
@@ -14,12 +10,15 @@ body {
     <title>CF-Times</title>
 </head>
 <body>
-    <nav style='text-align: left;'>
-<a href="./sports.html">sports</a>
-<a href="./politics.html">politics</a>
-<a href="./news.html">news</a>
-    </nav>
-
+    <header class="banner">
+        <h2>CodeFactory Journal</h2>
+        <br>
+       <nav>
+          <a href="./sports.html">sports</a>
+          <a href="./politics.html">politics</a>
+          <a href="./news.html">news</a>
+      </nav>
+    </header>   
    <article style='background-color: bisque;'>
         <h2>FSWD14: Just started!</h2>
 
@@ -28,7 +27,7 @@ body {
    Looking forward to our first code review.</p>
 </section>
    </article>
-    <footer>
+    <footer class="banner">
     Authors: Radek and Igor
     </footer>
 </body>
